edit whatcha/index.html make today-boxoffice-list markup

--- a/watcha/index.html
+++ b/watcha/index.html
@@ -108,7 +108,37 @@
           </ul>
         </div>
         <div class="today-boxoffice-list">
-
+          <h3>상위 영화 리스트</h3>
+          <ul>
+            <li>
+              <article class="today-boxoffice-article ranking-high-article">
+                <h4 class="article-heading high">킹스맨: 골든서클</h4>
+                <ul class="article-desc">
+                  <li>예매 1위 29.18%</li>
+                  <li>개봉 8일전</li>
+                  <li>누적관객수 711명</li>
+                  <li>액션</li>
+                  <li>2시간 21분</li>
+                  <li>청소년 관람불가</li>
+                </ul>
+                <div class="article-rating">
+                  <div class="star-rating"></div>
+                  <div class="num-rating">4.7</div>
+                  <div class="num-participate">(50명 참여)</div>
+                </div>
+                <div class="article-comment">
+                  <img src="" alt="" class="user-profile">
+                  <span class="user-name">Seonki Cheong</span>
+                  <span class="user-comment">잃을 게 있다는 것은 삶을 가치있게 만든다. 전편보다 화려해진 액션과 선율. 하지만 2% 부족</span>
+                </div>
+              </article>
+              <article class="today-boxoffice-article ranking-low-artice">
+                <h4 class="article-heading low"></h4>
+                <div class="my-profile"></div>
+                <span class="predict-rating"></span>
+              </article>
+            </li>
+          </ul>
         </div>
       </div>
     </main>
